--- a/index.html
+++ b/index.html
@@ -172,6 +172,13 @@
                 </div>
             </div>
         </section>
+        <!-- clientes -->
+
+
+        
+
+
+
         <!-- recomendaciones -->
         <section id="recomendaciones" class="bg-black">
             <div class="container-recomendacion">
@@ -278,19 +285,7 @@
         </section>
 
 
-        <section>
-            <div>
-                <div>
-                    <h1>ESTADOS UNIDOS, CALIFORNIA</h1>
-                </div>
-                <div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad facere aperiam cum, nisi consequatur 
-                        alias voluptatum adipisci cupiditate eius? Sint praesentium 
-                        facilis sapiente maxime iure exercitationem, unde officiis dignissimos corporis.
-                    </p>
-                </div>
-            </div>
-        </section>
+       
 
         <!-- footer -->
         <div id="contacto" class="container">
