--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 
         <!-- recomendaciones -->
-        <section id="recomendaciones" class="bg-black">
+        <section id="recomendaciones" class="background-recomendaciones">
             <div class="container-recomendacion">
                 <div>
                     <h2 class="titulo-recomendacion"><strong>Recomendaciones para usar Piedras Refractareas</strong>
@@ -289,7 +289,7 @@
 
         <!-- footer -->
         <div id="contacto" class="container">
-            <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <footer class="d-flex flex-wrap justify-content-between align-items-center border-top">
                 <h5>Piedras Refractareas Kitchen</h5>
                 <a href="/"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
