--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav mx-auto">
-                        <a class="titulo-nav" href="#">Producto</a>
+                        <a class="titulo-nav" href="#productos">Producto</a>
                         <a class="titulo-nav" href="#accesorios">Accesorios</a>
                         <a class="titulo-nav" href="#clientes">Clientes</a>
                         <a class="titulo-nav" href="#recomendaciones">Recomendaciones</a>
@@ -120,6 +120,35 @@
                 </div>
             </div>
         </section>
+        <!-- productos -->
+        <div>
+            <h2 id="productos" class="titulo-principal">Nuestras Piedras Refractareas</h2>
+        </div>
+        <section id="sec1" class="contenedor-producto">
+            <div class="contenedor-texto">
+                <h2>Piedra Refractarea 30x30</h2>
+                <p>Peso 3kg<br>Resistente hasta 1100grados<br> El espesor es de primer nivel (cordierita)<br>Espesor de
+                    1,6cm<br>Se puede usar sobre la parrilla al carbon</p>
+                <a href="#sec2">Section 2</a>
+            </div>
+            <img class="fotos-producto" src="https://i.ibb.co/C2K9trJ/30x30x1-1-con-logo.png" alt="">
+        </section>
+        <section id="sec2" class="contenedor-producto">
+            <div class="contenedor-texto">
+                <h2>piedra 2</h2>
+                <p>jdjdjdjdjdjdjdjjdjdjdjdjdddjjdjdjjd</p>
+                <a href="#sec3">Section 3</a>
+            </div>
+            <img class="fotos-producto" src="https://i.ibb.co/C2K9trJ/30x30x1-1-con-logo.png" alt="">
+        </section>
+        <section id="sec3" class="contenedor-producto">
+            <div class="contenedor-texto">
+                <h2>piedra 3</h2>
+                <p>jdjdjdjdjdjdjdjjdjdjdjdjdddjjdjdjjdjdj</p>
+                <a href="#sec1">Section 1</a>
+            </div>
+            <img class="fotos-producto" src="https://i.ibb.co/C2K9trJ/30x30x1-1-con-logo.png" alt="">
+        </section>
         <!-- pala rotadora (accesorios) -->
         <section class="container">
             <h2 id="accesorios" class="titulo-principal">Nuestros Accesorios</h2>
@@ -188,7 +217,6 @@
                 </div>
             </div>
         </section>
-
         <!-- clientes -->
         <section id="clientes">
             <div class="container-titulo">
