--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
                     <div class=" col-lg-5 col-md-12 d-flex align-items-center px-3">
                         <div class="text-white">
                             <h2 class="p-1 fs-1 text-dark">Nicolas Hanono</h2>
-                            <h3 class="py-2 text-muted fs-2 ">Piedras refractareas Kitchen</h3>
+                            <h1 class="py-2 text-muted fs-2 ">Piedras refractareas Kitchen</h1>
                             <p class="py-2 fs-4 text-secondary">
-                                Envios a GBA y CABA - Venta por menor/mayor</p>
+                                Envios a GBA y CABA - Venta por menor/mayor
+                            </p>
                         </div>
                     </div>
                     <!-- carousel-->
@@ -121,7 +122,7 @@
             </div>
         </section>
         <!-- productos -->
-        <div>
+        <div class="p-20">
             <h2 id="productos" class="titulo-principal">Nuestras Piedras Refractareas</h2>
         </div>
         <section id="sec1" class="contenedor-producto">
@@ -251,7 +252,6 @@
 
 
 
-
         <!-- recomendaciones -->
         <section id="recomendaciones" class="background-recomendaciones">
             <div data-aos="fade-up" data-aos-duration="3000" class="container-recomendacion">
@@ -370,7 +370,7 @@
                         <use xlink:href="#bootstrap" /></svg>
                 </a>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-warning">Contacto</h5>
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-warning text-black">Contacto</h5>
                     <p><i class="icon-home3 p-2"></i>Corona golf club 2452, Pilar, Buenos Aires.</p>
                     <p><i class="icon-mail p-2"></i>nicohanono@gmail.com</p>
                     <p><i class="icon-phone p-2"></i>+54 9 11 3016-8969</p>
