--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
                     <div class=" col-lg-5 col-md-12 d-flex align-items-center px-3">
                         <div class="text-white">
                             <h2 class="p-1 fs-1 text-dark">Nicolas Hanono</h2>
-                            <h1 class="py-2 text-muted fs-2 ">Piedras refractareas Kitchen</h1>
+                            <h1 class="py-2 text-muted fs-2 "> <span style="color:#b36a5e">Piedras refractareas
+                                    Kitchen</span></h1>
                             <p class="py-2 fs-4 text-secondary">
-                                Envios a GBA y CABA - Venta por menor/mayor
+                                <strong><span style="color:#c97c5d">Envios a GBA y CABA - Venta por
+                                        menor/mayor</span></strong>
                             </p>
                         </div>
                     </div>
@@ -127,32 +129,34 @@
         </div>
         <section id="sec1" class="contenedor-producto">
             <div class="contenedor-texto">
-                <h2>Piedra Refractarea 30x30</h2>
+                <h2>Piedra Refractarea|30x30</h2>
                 <p>Peso 3kg<br>Resistente hasta 1100grados<br> El espesor es de primer nivel (cordierita)<br>Espesor de
                     1,6cm<br>Se puede usar sobre la parrilla al carbon</p>
                 <a href="#sec2">Section 2</a>
             </div>
-            <img class="fotos-producto" src="https://i.ibb.co/C2K9trJ/30x30x1-1-con-logo.png" alt="">
+            <img class="fotos-producto" src="https://i.ibb.co/wNxzJ57/CC80-B351-BAC3-4-C09-9-F07-A617-FA2-DEDB4-removebg-preview.png" alt="">
         </section>
         <section id="sec2" class="contenedor-producto">
             <div class="contenedor-texto">
-                <h2>piedra 2</h2>
-                <p>jdjdjdjdjdjdjdjjdjdjdjdjdddjjdjdjjd</p>
+                <h2>Piedra Refractarea|42x42</h2>
+                <p>Peso 5kg<br>Resistente hasta 1100grados<br> El espesor es de primer nivel (cordierita)<br>Espesor de
+                    1,6cm<br>Se puede usar sobre la parrilla al carbon</p>
                 <a href="#sec3">Section 3</a>
             </div>
-            <img class="fotos-producto" src="https://i.ibb.co/C2K9trJ/30x30x1-1-con-logo.png" alt="">
+            <img class="fotos-producto" src="https://i.ibb.co/wNxzJ57/CC80-B351-BAC3-4-C09-9-F07-A617-FA2-DEDB4-removebg-preview.png" alt="">
         </section>
         <section id="sec3" class="contenedor-producto">
             <div class="contenedor-texto">
-                <h2>piedra 3</h2>
-                <p>jdjdjdjdjdjdjdjjdjdjdjdjdddjjdjdjjdjdj</p>
+                <h2>Tajuela Refractarea|229x114x22mm</h2>
+                <p>Para cubrir 1 metro cuadrado se requiere 40 unidades<br>Resistente hasta 1100grados<br> El espesor es
+                    de primer nivel (cordierita)<br>Se puede usar sobre la parrilla al carbon</p>
                 <a href="#sec1">Section 1</a>
             </div>
-            <img class="fotos-producto" src="https://i.ibb.co/C2K9trJ/30x30x1-1-con-logo.png" alt="">
+            <img class="fotos-producto" src="https://i.ibb.co/wNxzJ57/CC80-B351-BAC3-4-C09-9-F07-A617-FA2-DEDB4-removebg-preview.png" alt="">
         </section>
         <!-- pala rotadora (accesorios) -->
-        <section class="container">
-            <h2 id="accesorios" class="titulo-principal">Nuestros Accesorios</h2>
+        <section id="accesorios">
+            <h2 class="titulo-principal">Nuestros Accesorios</h2>
             <div class="container h-100 w-100 my-5">
                 <div class="row">
                     <div data-aos="fade-up" data-aos-duration="3000" class="col-lg-7 px-3 col-md-12">
@@ -242,16 +246,12 @@
                     clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
+            <div class="videos-container">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/tCLQhxN90G4" title="YouTube video 
+                player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+                encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
         </section>
-
-
-
-
-
-
-
-
-
         <!-- recomendaciones -->
         <section id="recomendaciones" class="background-recomendaciones">
             <div data-aos="fade-up" data-aos-duration="3000" class="container-recomendacion">
@@ -356,21 +356,17 @@
                 </div>
             </div>
         </section>
-
-
-
-
         <!-- footer -->
         <div id="contacto" class="container">
             <footer class="d-flex flex-wrap justify-content-between align-items-center border-top">
-                <h5>Piedras Refractareas Kitchen</h5>
+                <h5> <span style="color:#b36a5e;">Piedras Refractareas Kitchen</span></h5>
                 <a href="/"
                     class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap" /></svg>
                 </a>
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-warning text-black">Contacto</h5>
+                    <h5 class="text-uppercase mb-4 font-weight-bold text-warning text-black"> <span style="color:#c97c5d;">Contacto</span></h5>
                     <p><i class="icon-home3 p-2"></i>Corona golf club 2452, Pilar, Buenos Aires.</p>
                     <p><i class="icon-mail p-2"></i>nicohanono@gmail.com</p>
                     <p><i class="icon-phone p-2"></i>+54 9 11 3016-8969</p>
@@ -378,10 +374,6 @@
             </footer>
         </div>
     </main>
-
-
-
-
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
         integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous">
